--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/ZimboSebastiao/salva-pets-api#readme",
   "dependencies": {
+    "axios": "^1.5.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "mysql2": "^3.6.1"
   }
 }
