--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "mysql2": "^3.6.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "url": "^0.11.3"
   }
 }
