--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "axios": "^1.5.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
+    "fs.promises": "^0.1.2",
     "mysql2": "^3.6.1",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
